💄 i18n: Add navigation and loading messages for onboarding in German, English, Spanish, and French

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1535,6 +1535,10 @@
         }
     },
     "common": {
+        "previous": "Previous",
+        "next": "Next",
+        "loading": "Loading...",
+        "finish": "Finish",
         "units": {
             "day": "Day",
             "week": "Week",
