--- a/frontend/src/locales/es/translation.json
+++ b/frontend/src/locales/es/translation.json
@@ -1480,6 +1480,10 @@
         }
     },
     "common": {
+        "previous": "Anterior",
+        "next": "Siguiente",
+        "loading": "Cargando...",
+        "finish": "Terminar",
         "units": {
             "day": "Día",
             "week": "Semana",
