--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -1480,6 +1480,10 @@
     }
   },
   "common": {
+    "previous": "Zurück",
+    "next": "Weiter",
+    "loading": "Laden...",
+    "finish": "Fertigstellen",
     "units": {
       "day": "Tag",
       "week": "Woche",
